--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     //Flow
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     //Room
     def room_version = "2.2.5"
@@ -54,7 +54,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
     //Koin
     def koin_version = "2.1.5"
@@ -63,13 +63,13 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     testImplementation "org.koin:koin-test:$koin_version"
     //Lifecycle - Livedata
-    def lifecycle_version="2.3.0-alpha01"
+    def lifecycle_version="2.3.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     //Navigation component
-    def nav_version = "2.3.0-alpha05"
+    def nav_version = "2.3.0-beta01"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
@@ -79,7 +79,7 @@ dependencies {
     //SwipeRefreshLayout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     //RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha02"
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha03"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
 
     //Paging library
@@ -96,6 +96,8 @@ dependencies {
     implementation 'com.github.santalu:aspect-ratio-imageview:1.0.9'
     //RandomColor
     implementation 'com.github.lzyzsd.randomcolor:library:1.0.0'
+    //TabLayoutMediator
+    implementation 'com.google.android.material:material:1.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
