--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ env:
 #  - adb shell input keyevent 82 &
 script:
   - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew connectedCheck
+#  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+#  - emulator -avd test -no-skin -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
+#  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+#  - ./gradlew connectedCheck
 after_success:
   - bash <(curl -s https://codecov.io/bash)
