--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.3.0-alpha05"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -17,6 +18,7 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 allprojects {
     repositories {
