--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ env:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 script:
-  - ./gradlew build jacocoTestReportDebugk assembleAndroidTest
+  - ./gradlew build jacocoTestReportDebug assembleAndroidTest
 #  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
 #  - android-wait-for-emulator
