chore: tentative fix for .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ env:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 script:
+  - yes | sdkmanager --licenses
   - ./gradlew build jacocoTestReportDebug assembleAndroidTest
 #  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
