--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,11 @@ env:
 #  - emulator -avd test -no-audio -no-window &
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
+before_install:
+  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "build-tools;29.0.2"
 script:
-  - yes | sdkmanager --licenses
+#  - yes | sdkmanager --licenses
   - ./gradlew build jacocoTestReportDebug assembleAndroidTest
 #  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
