--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
   - yes | sdkmanager "build-tools;29.0.2"
 script:
 #  - yes | sdkmanager --licenses
-  - ./gradlew build jacocoTestReportDebug assembleAndroidTest
+  - ./gradlew build jacocoTestReportDebug
 #  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
 #  - android-wait-for-emulator
