--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: android
-dist: trusty
+env:
+  matrix:
+    - ANDROID_TARGET=android-26  ANDROID_ABI=armeabi-v7a
+before_script:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 android:
   components:
     # Uncomment the lines below if you want to
@@ -11,7 +18,7 @@ android:
     - build-tools-26.0.2
 
     # The SDK version used to compile your project
-    - android-26
+    - $ANDROID_TARGET
 
     # Additional components
     - extra-google-google_play_services
@@ -22,11 +29,6 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-17
-
-env:
-  global:
-    - ANDROID_TARGET=android-22
-    - ANDROID_ABI=armeabi-v7a
 # Emulator Management: Create, Start and Wait
 #before_script:
 #  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
@@ -39,11 +41,11 @@ before_install:
 script:
 #  - yes | sdkmanager --licenses
   - ./gradlew build jacocoTestReportDebug
-#  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+#  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 #  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-#  - ./gradlew connectedCheck
+  - ./gradlew connectedCheck
 after_success:
   - bash <(curl -s https://codecov.io/bash)
