--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //Flow
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     //Room
     def room_version = "2.2.5"
@@ -71,7 +71,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     testImplementation "org.koin:koin-test:$koin_version"
     //Lifecycle - Livedata
-    def lifecycle_version="2.3.0-alpha03"
+    def lifecycle_version="2.3.0-beta01"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -85,10 +85,10 @@ dependencies {
     //SingleLiveEvents
     implementation "com.github.hadilq.liveevent:liveevent:1.2.0"
     //SwipeRefreshLayout
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     //RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha03"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
 
     //Paging library
     def paging_version = "2.1.2"
