--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ env:
   matrix:
     - ANDROID_TARGET=android-26  ANDROID_ABI=default/x86
 before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - android list targets
+
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -19,6 +21,7 @@ android:
 
     # The SDK version used to compile your project
     - $ANDROID_TARGET
+    - android-25
 
     # Additional components
     - extra-google-google_play_services
@@ -28,6 +31,7 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-26
+  - sys-img-armeabi-v7a-google_apis-25
     - sys-img-armeabi-v7a-android-17
 # Emulator Management: Create, Start and Wait
 #before_script:
@@ -40,6 +44,7 @@ before_install:
   - yes | sdkmanager "build-tools;29.0.2"
 script:
 #  - yes | sdkmanager --licenses
+
   - ./gradlew build jacocoTestReportDebug
 #  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a -c 100M
 #  - emulator -avd test -no-skin -no-audio -no-window &
