--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 before_script:
   - android list targets
   - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 android:
