--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,72 @@
+#This configuration was found on ankidroid and changed a little
 language: android
+
+jdk:
+  - oraclejdk8
+
 env:
+  global:
+    - ADB_INSTALL_TIMEOUT=8
+    - ABI=armeabi-v7a
+    - EMU_FLAVOR=default # use google_apis flavor if no default flavor emulator
+    # PATH order is incredibly important. e.g. the 'emulator' script exists in more than one place!
+    - ANDROID_HOME=/usr/local/android-sdk
+    - TOOLS=${ANDROID_HOME}/tools
+    - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
   matrix:
-    - ANDROID_TARGET=android-26  ANDROID_ABI=default/x86
-before_script:
-  - android list targets
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
-  - emulator -avd test -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+    - API=27 ABI=x86_64
+    #- API=28 ABI=x86_64 # Slowness/timing issues / Fails with unresponsive adb command / so unrecognized API for adb
+    #- API=Q ABI=x86_64 # Fails I think because of perf + timeouts. 10 minute wait not enough, fixable
+
+# This block currently does not work, but it used to. API=28/Q are probably fixable
+# but we don't need allow_failures to be on in master to work through them
+#matrix:
+#  fast_finish: true # We can report success without waiting for these
+#  allow_failures:
+#     - API=28 ABI=x86_64
+#     #- env: API=28 ABI=x86_64 # allowing failure to see how it works flake-wise
+
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
+    # installing tools to start, then use `sdkmanager` below to get the rest
     - tools
-    - platform-tools
 
-    # The BuildTools version used by your project
-    - build-tools-26.0.2
+licenses:
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
 
-    # The SDK version used to compile your project
-    - $ANDROID_TARGET
-    - android-25
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-26
-    - sys-img-armeabi-v7a-google_apis-25
-    - sys-img-armeabi-v7a-android-17
 # Emulator Management: Create, Start and Wait
-#before_script:
-#  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-#  - emulator -avd test -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
-before_install:
-  - yes | sdkmanager "platforms;android-28"
-  - yes | sdkmanager "build-tools;29.0.2"
-script:
-#  - yes | sdkmanager --licenses
+install:
+  - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning
+  - echo y | sdkmanager "platform-tools" >/dev/null
+  - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
+  - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
+  - echo y | sdkmanager "platforms;android-$API" >/dev/null # We need the API of the emulator we will run
+  - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
+  - echo y | sdkmanager --channel=4 "emulator" # Experiment with canary, specifying 28.0.3 (prior version) did not work
+  - echo y | sdkmanager "extras;android;m2repository" >/dev/null
+  - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" #>/dev/null # install our emulator
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
+  - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
-  - ./gradlew build jacocoTestReportDebug
-#  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a -c 100M
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
-#  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew connectedCheck
-after_success:
+script:
+  - ./gradlew jacocoTestReportDebug
   - bash <(curl -s https://codecov.io/bash)
+  - ./gradlew detekt
+  #where can we upload detekt results to have a badge?
+
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
+#notifications:
+#  email:
+#    - flerda+ankidroid-continuous@gmail.com
