--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,15 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.3.0-alpha05"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.14.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
 apply plugin: 'com.vanniktech.android.junit.jacoco'
+apply plugin: "io.gitlab.arturbosch.detekt"
 
 allprojects {
     repositories {
