--- a/command-core/build.gradle
+++ b/command-core/build.gradle
@@ -7,6 +7,13 @@ dependencies {
     //Flow
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
+    testImplementation 'junit:junit:4.12'
+
+    //Flow
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
+
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 
 }
 
