--- a/tui-browser/build.gradle
+++ b/tui-browser/build.gradle
@@ -9,12 +9,12 @@ repositories{
 }
 
 ext {
-    javaMainClass = "com.alaeri.tui_browser.TuiBrowser"
+    javaMainClass = "com.alaeri.TuiBrowser"
 }
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.alaeri.tui_browser.TuiBrowser'
+                'Main-Class': 'com.alaeri.TuiBrowser'
         )
     }
 }
