--- a/tui-browser/build.gradle
+++ b/tui-browser/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.beust:klaxon:5.0.1'
     //Wikitext Parser
     implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
+    implementation project(path: ":command-server")
 }
 
 sourceCompatibility = "1.7"
