--- a/command-server/build.gradle
+++ b/command-server/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     implementation "io.ktor:ktor:1.2.5"
     implementation "io.ktor:ktor-server-netty:1.2.5"
     implementation "io.ktor:ktor-gson:1.2.5"
+    implementation project(path: ":command-core")
 }
