--- a/tui-browser/build.gradle
+++ b/tui-browser/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     //Wikitext Parser
     implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
     implementation project(path: ":command-server")
+    implementation project(path: ":command-core")
 }
 
 sourceCompatibility = "1.7"
