--- a/command-server/build.gradle
+++ b/command-server/build.gradle
@@ -10,8 +10,10 @@ java {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "io.ktor:ktor:1.2.5"
-    implementation "io.ktor:ktor-server-netty:1.2.5"
-    implementation "io.ktor:ktor-gson:1.2.5"
+    def ktor_version = "1.2.5"
+    implementation "io.ktor:ktor:$ktor_version"
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "io.ktor:ktor-websockets:$ktor_version"
     implementation project(path: ":command-core")
 }
