--- a/command-core/build.gradle
+++ b/command-core/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    //Moshi - testing
+    def moshi_version = "1.11.0"
+    testImplementation("com.squareup.moshi:moshi:$moshi_version")
+    testImplementation("com.squareup.moshi:moshi-kotlin:$moshi_version")
 
 }
 
