--- a/log-core/build.gradle
+++ b/log-core/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation 'org.mockito:mockito-inline:3.6.28'
 }
