--- a/log-extras/build.gradle
+++ b/log-extras/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     //Flow
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation project(path: ':log-serialize')
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     testImplementation 'junit:junit:4.13.1'
 
