--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,5 @@ include ':log-extras'
 include ':log-serialize'
 include ':log-sample-app'
 include ':log-sample-lib'
+include ':log-repository'
+include ':log-server'
