--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
@@ -14,14 +14,16 @@ buildscript {
         def nav_version = "2.3.0-alpha05"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.14.2"
-
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 apply plugin: "io.gitlab.arturbosch.detekt"
+apply plugin: 'kotlinx-serialization'
 
 allprojects {
     repositories {
