--- a/log-serialize/build.gradle
+++ b/log-serialize/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'java-library'
     id 'kotlin'
+
 }
+apply plugin: 'kotlinx-serialization'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
@@ -14,9 +16,12 @@ dependencies {
 
     //Flow
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     testImplementation 'junit:junit:4.13.1'
 
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation 'org.mockito:mockito-inline:3.6.28'
+
+
 }
