--- a/tui-browser/build.gradle
+++ b/tui-browser/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.googlecode.lanterna:lanterna:3.0.4"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     //Fuel
     def fuel_version = "2.3.0"
     implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
@@ -41,8 +41,15 @@ dependencies {
     implementation 'com.beust:klaxon:5.0.1'
     //Wikitext Parser
     implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
-    implementation project(path: ":command-server")
-    implementation project(path: ":command-core")
+
+    implementation project(path: ':log-serialize')
+    implementation project(path: ':log-extras')
+    implementation project(path: ':log-core')
+    implementation project(path: ':log-sample-lib')
+    implementation project(path: ':log-server')
+    implementation project(path: ':log-repository')
+    //Needed to remove KTOR warnings
+    implementation "org.slf4j:slf4j-nop:1.6.1"
 }
 
 sourceCompatibility = "1.7"
