--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,7 @@
 include ':tui-browser'
-include ':command-koin'
-include ':command-glide'
-include ':command-android-visualizer'
-include ':command-core'
-include ':command-android'
 include ':recyclerview-extras'
 rootProject.name='Workbench'
 include ':app'
-include ':command-server'
 include ':log-core'
 include ':log-extras'
 include ':log-serialize'
@@ -15,3 +9,6 @@ include ':log-sample-app'
 include ':log-sample-lib'
 include ':log-repository'
 include ':log-server'
+include ':log-koin'
+include ':log-android-ui'
+include ':log-glide'
