--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: "io.gitlab.arturbosch.detekt"
@@ -27,26 +26,49 @@ android {
             testCoverageEnabled true
         }
     }
-    viewBinding {
-        enabled = true
+    buildFeatures{
+        viewBinding {
+            enabled = true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=org.mylibrary.OptInAnnotation"
+    }
+
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
+    }
+
 }
 
 dependencies {
-    implementation project(path: ':command-glide')
-    implementation project(path: ':command-core')
-    implementation project(path: ':command-android-visualizer')
-    implementation project(path: ':command-android')
-    implementation project(path: ':command-koin')
+//    implementation project(path: ':command-glide')
+//    implementation project(path: ':command-core')
+//    implementation project(path: ':command-android-visualizer')
+//    implementation project(path: ':command-android')
+//    implementation project(path: ':command-koin')
+    implementation project(path: ':log-serialize')
+    implementation project(path: ':log-extras')
+    implementation project(path: ':log-core')
+    implementation project(path: ':log-android-ui')
+    implementation project(path: ':log-glide')
+//    implementation project(path: ':log-koin')
+    implementation project(path: ':log-sample-lib')
+    implementation project(path: ':log-server')
+    implementation project(path: ':log-repository')
     implementation project(path: ':recyclerview-extras')
     //Multidex
     def multidex_version = "2.0.1"
@@ -54,13 +76,13 @@ dependencies {
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.32"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //Flow
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     //Koin
     def koin_version = "2.1.5"
@@ -69,7 +91,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     testImplementation "org.koin:koin-test:$koin_version"
     //Room
-    def room_version = "2.2.5"
+    def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -78,13 +100,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
     //Lifecycle - Livedata
-    def lifecycle_version="2.3.0-beta01"
+    def lifecycle_version="2.4.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     //Navigation component
-    def nav_version = "2.3.0-beta01"
+    def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
@@ -94,11 +116,11 @@ dependencies {
     //SwipeRefreshLayout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     //RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
+    implementation "androidx.recyclerview:recyclerview-selection:1.2.0-alpha01"
 
     //Paging library
-    def paging_version = "2.1.2"
+    def paging_version = "3.0.0"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
     //Viewpager
@@ -108,9 +130,9 @@ dependencies {
     //RandomColor
     implementation 'com.github.lzyzsd.randomcolor:library:1.0.0'
     //TabLayoutMediator
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.4.0-beta01'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
