fix: upgrade kotlin to version that doesn't suffer from suspend inline function bug + reuse inline logger (in the sample and the browser)

--- a/log-server/build.gradle
+++ b/log-server/build.gradle
@@ -9,11 +9,11 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_7
 }
 sourceSets {
-    main {
-        resources {
-            srcDirs "src/main/resources"
-        }
-    }
+//    main {
+//        resources {
+//            srcDirs "src/main/resources"
+//        }
+//    }
 }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
