chore: upgrade travis ci jdk

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,7 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-beta05'
@@ -28,7 +27,7 @@ apply plugin: 'kotlinx-serialization'
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
 
         
