--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,20 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
 
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
