--- a/log-sample-lib/build.gradle
+++ b/log-sample-lib/build.gradle
@@ -4,8 +4,14 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+//kotlinOptions {
+//    jvmTarget = "1.8"
+//}
+repositories{
+    mavenCentral()
 }
 
 dependencies {
@@ -23,7 +29,9 @@ dependencies {
     implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
     implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
     //Klaxon
-    implementation 'com.beust:klaxon:5.0.1'
+    implementation 'com.beust:klaxon:5.5'
     //Wikitext Parser
     implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
 }
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
