--- a/tui-browser/build.gradle
+++ b/tui-browser/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 repositories{
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 ext {
@@ -37,8 +38,9 @@ dependencies {
     def fuel_version = "2.3.0"
     implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
     implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
-    //Klaxon
-    implementation 'com.beust:klaxon:5.0.1'
+//    //Klaxon
+    implementation 'com.beust:klaxon:5.5'
+//    implementation 'com.github.cbeust:klaxon:5.5'
     //Wikitext Parser
     implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
 
@@ -52,5 +54,13 @@ dependencies {
     implementation "org.slf4j:slf4j-nop:1.6.1"
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+//kotlinOptions {
+//    jvmTarget = "1.8"
+//}
