--- a/log-sample-lib/build.gradle
+++ b/log-sample-lib/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java-library'
-    id 'kotlin'
+    id "java-library"
+    id 'org.jetbrains.kotlin.multiplatform'
 }
 
 java {
@@ -12,6 +12,8 @@ java {
 //}
 repositories{
     mavenCentral()
+    gradlePluginPortal()
+    google()
 }
 
 dependencies {
@@ -35,3 +37,41 @@ dependencies {
 }
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+kotlin {
+    macosArm64()
+    jvm{
+        withJava()
+        compilations.main.output
+        artifacts {
+
+        }
+
+    }
+
+
+
+
+    sourceSets{
+        commonMain{
+            dependencies {
+                implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+                //Flow
+                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt'
+
+                //Fuel
+                def fuel_version = "2.3.0"
+                implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
+                implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
+                //Wikitext Parser
+                implementation group: 'org.sweble.wikitext', name: 'swc-parser-lazy', version: '3.1.9'
+
+            }
+        }
+        macosArm64{
+            dependencies {
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-macosarm64:1.6.0-native-mt"
+            }
+        }
+    }
+
+}
